# bauble-toolbox

./: Cargo.toml  LICENSE
bauble-toolbox-gui/: package-lock.json  package.json
bauble-toolbox-gui/src/: App.css  App.tsx
bauble-toolbox-gui/src-tauri/: 2  Cargo.toml  config.json  tauri.conf.json
bauble-toolbox-gui/src-tauri/capabilities/: meetopen.json
bauble-toolbox-gui/src-tauri/src/: lib.rs  main.rs
bauble-toolbox-gui/src/components/: ExternalLink.tsx
bauble-toolbox-gui/src/components/Links/: LinkList.tsx
bauble-toolbox-gui/src/components/Tasks/: TaskList.tsx
bauble-toolbox-gui/src/hooks/: useLinks.ts  useTasks.ts
bauble-toolbox-gui/src/types/: index.ts
bauble-toolbox-logic/: Cargo.toml
bauble-toolbox-logic/src/: config.rs  lib.rs
bauble-toolbox-logic/test_files/: test_fail_input.json  test_input.json
bauble-toolbox-logic/tests/: config_tests.rs
